# nexustrader

./: .gitignore  README.md  session_summary.md
backend/: .tmp_vertex_resp.json  CROSS_EXAMINATION_IMPLEMENTATION.md  FINNHUB_NEWS_FEATURES.md  SIGNAL_EXTRACTOR_IMPLEMENTATION.md  pyproject.toml  run_archive.sqlite3  test_chart_api.py  test_debate_mechanism.py  test_fundamental_data.py  test_llm.py  test_memory.py  test_risk_debate.py  test_signal_extractor.py  test_social_media_integration.py  uv.bat
backend/app/: __init__.py  llm.py  main.py  test_baselines.py
backend/app/agents/: analyst_team.py  execution_core.py  research_team.py  risk_management.py
backend/app/baselines/: README.md  __init__.py  strategies.py
backend/app/graph/: agent_graph.py  conditional_logic.py  state.py
backend/app/tools/: derivatives_tools.py  financial_data_tools.py  fundamental_data_tools.py  market_data_tools.py  news_tools.py  portfolio_tools.py  social_media_tools.py  technical_analysis_tools.py
backend/app/utils/: __init__.py  cache.py  memory.py  run_archive.py  shared_context.py  stage_a_cache.py
backend/chroma_db/: chroma.sqlite3
backend/chroma_db/0ab1783f-c45a-4e54-9d23-77282ba69055/: index_metadata.pickle
backend/chroma_db/e892294e-9d2a-4d96-a63f-fa5609dddf92/: index_metadata.pickle
backend/documentation/claude_context/: ARCHITECTURE_CLEANUP_SUMMARY.md  DEVELOPMENT_ROADMAP.md  HIGH_LEVEL_STATUS.md  MEMORY_SYSTEM_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  REALISTIC_ASSESSMENT.md  RISK_DEBATE_IMPLEMENTATION.md  SESSION_Nov13_FINAL.md  SESSION_SUMMARY.md  SOCIAL_MEDIA_INTEGRATION.md  SOCIAL_MEDIA_STATUS_UPDATE.md  TRADINGAGENTS_ANALYSIS.md  (+2 more)
backend/misc/: sample_TSLA_run.md
(+963 files in other folders)
