[project]
name = "nexustrader-backend"
version = "0.2.0"
description = "The backend for the NexusTrader multi-agent trading system."
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langgraph",
    "chromadb",
    "pydantic",
    "python-dotenv",
    "yfinance",
    "pandas-ta",
    "mplfinance",
    "google-genai",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
