[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexustrader-backend"
version = "0.2.0"
description = "The backend for the NexusTrader multi-agent trading system."
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langgraph",
    "chromadb",
    "pydantic",
    "python-dotenv",
    "yfinance",
    "mplfinance",
    "google-genai",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["charts*", "misc*"]
